Bug 116566 - Respect configured AutoSpellCheck colour in the dialog too
Summary: Respect configured AutoSpellCheck colour in the dialog too
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0 target:7.4.6
Keywords:
Depends on:
Blocks: Options-Dialog Spell-Checking-Dialog Options-Dialog-Colours
  Show dependency treegraph
 
Reported: 2018-03-22 15:27 UTC by Gerhard Weydt
Modified: 2023-01-24 10:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Current state of dark mode in the Spelling dialog (56.08 KB, image/png)
2022-10-21 01:31 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard Weydt 2018-03-22 15:27:37 UTC
By Tools -> Options -> LibreOffice -> Application Colours you can choose a colour for AutoSpellCheck. This applies to the wavy line below the word with the incorrect spelling, but not to the character colour of the same word in the spelling dialog opened via Tools -> Spelling...
For people with visual impairment who choose a dark document background an bright colours for text this is a problem. The character colour in the dialog should therefore be changed to the same colour as the wavy line.
Remark: bugs #95684 and #105527 have a connected issue, but do not deal with the same problem, they are rather more general.
Comment 1 Dieter 2018-03-22 18:04:32 UTC
I think this would only be useful, if the background of the spelling dialog is also dark. But is this possible?
Comment 2 Gerhard Weydt 2018-03-22 19:33:43 UTC
Yes, if the background colour for documents is changed, it is changed for the dialog, too. Otherwise it would indeed be nonsense to ask for the change of the chararacter colour.
Comment 3 Dieter 2018-03-23 08:16:03 UTC
If I change the document background colour or the application background colour the background of the spelling dialog is still white.
Comment 4 Heiko Tietze 2018-03-23 08:45:59 UTC
Would say yes as there are more reasons to adjust the color than for dark backgrounds. On the other hand, the dialog has a slightly different identification by bold and colored single word instead of wavy underline and colored multiple words. Other opinions?
Comment 5 Gerhard Weydt 2018-03-24 20:15:47 UTC
Dieter Praas was right in asking if the background of the field in the dialog could be dark. I would have sworn that it had changed when I changed the document background colour (see comment #2), but I cannot reproduce it, so I must admit that I probably beguiled myself.
B u t  it can be changed when choosing a high contrast theme, as I was informed by Regina and the person who inspired my bug report. In Windows 10 there are 3 (of 4) high contrast themes that use a black background. A person that chooses one of these will very probably also choose a dark, although not necessarily black, background for the documents, as did indeed my informant.
Then he will choose a light colour for the wavy line below the error in the document, and the same colour would be certainly more appropriate in the spelling dialog than the original red colour which does not provide much contrast to the dark background.
Comment 6 Heiko Tietze 2018-03-28 19:12:29 UTC
No one disagreed, so please implement the change as suggested and respect background and foreground colors as configured by the user.
Comment 7 QA Administrators 2019-03-29 04:02:39 UTC Comment hidden (obsolete)
Comment 8 Gerhard Weydt 2019-06-10 00:02:59 UTC
No change as regards version 6.2.2.2.
Comment 9 Dieter 2021-05-04 07:11:54 UTC
Still present in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 15a9bee9ef26ce13ed1e26319306a88b6d886158
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

Steps to reproduce
1. Open Tools => Options => LibreOffice => Application Colours
2. Change colour for AutoSpell Check (for example change it to Dark Purple 1)
3. Write some word with a wrong spelling => wrong words are underline in Dark Purple 1 (expected)
4. Tools => Spelling

Actual result: Word with wrong spelling doesn't have Dark Purple as colour
Expected result: Should have.
Comment 10 Heiko Tietze 2021-05-04 07:45:59 UTC
Changing the application color has no immediate effect, all currently red-lined content remain red. But new typos take the color (haven't checked what happens after load/save).
Comment 11 Rafael Lima 2022-10-21 01:31:37 UTC
Created attachment 183181 [details]
Current state of dark mode in the Spelling dialog

Here's the current state of the Spelling dialog using dark mode. I changed the AutoSpellCheck color to purple and it does not have an effect on the dialog. Moreover, the preview is black whereas my Document Color is white.

So what I propose is:
1) Use the Document Color / Font Color options in the preview box
2) Respect the AutoSpellCheck color for the highlighted text

I'll see if I can do it and then submit a patch.
Comment 12 Rafael Lima 2022-11-02 18:47:49 UTC
Patch available for review at:

https://gerrit.libreoffice.org/c/core/+/142147
Comment 13 Commit Notification 2022-11-03 15:06:27 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1de8308d40fad8e9281d2b491f8c5c919fda82f4

tdf#116566 Make Spellcheck dialog respect dark background

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Dieter 2022-11-13 07:31:34 UTC
VERIFIED with

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 55cd20e6228a06836285c14ca6726adb1bb4ffcb
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Rafael, thanks for fixing it!
Comment 15 Commit Notification 2023-01-02 19:04:10 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9adcf14d9b2e9dffd47a26eae202da348675a5e4

tdf#116566 Make Spellcheck dialog respect dark background

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2023-01-24 10:36:14 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard