tdf#116566 Make Spellcheck dialog respect dark background

This patch makes the sentence in the spellcheck dialog respect the colors in the selected color scheme. More specifically, it uses the AutoSpellcheck color and the Font Color in the Edit Engine.

Change-Id: I0f8e842417645250c9145d1e37d8cf52c290379e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142147
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>